@@ -55,15 +55,23 @@ if(MSVC)
     endif()
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 else()
     option(PEDANTIC "Compile with pedantic warnings" ON)
     option(WERROR "Treat warnings as errors" OFF)
-    add_compile_options(-Wno-sign-compare -fno-omit-frame-pointer)
     if(PEDANTIC)
         add_compile_options(-pedantic -Wall)
     endif()
     if(WERROR)
         add_compile_options(-Werror)
+    endif()
+
+    add_compile_options(-Wno-sign-compare -fno-omit-frame-pointer)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_C_COMPILER_ID STREQUAL "GNU" )
+        option(PORTABLE "Build a portable binary without host-specific optimization" OFF)
+        if(NOT PORTABLE)
+            add_compile_options(-march=native)
+        endif()
     endif()
     if (CMAKE_BUILD_TYPE MATCHES Debug)
         add_compile_options(-g)
