@@ -2,6 +2,8 @@
 
 libcerf-2.3, released :
   - Fix compiler flags; use -O3 for Release
+  - Under gcc, use -march=native.
+       PACKAGE MAINTAINERS: use -DPORTABLE=ON to override this !!
   - Add test coverage for erfcx, dawson, im_w_of_x (against nearby complex and status quo)
   - Avoid some divisions in function voigt (suggested by Alexander Kleinsorge)
 
